2008-10-09  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-picker-button.c
	(hildon_picker_button_set_done_button_text): Make a copy of the
	text, and free the previous value.

2008-10-09  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c:
	(hildon_touch_selector_entry_print_func): Return the selected row's
	text if the entry is empty.

	Fixes: NB#89651 (HildonTouchSelectorEntry title is <unnamed>, when
	entry is empty)

2008-10-09  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c: Minor docs fixes.

2008-10-09  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon.types
	* src/hildon-check-button.h
	* src/hildon-check-button.c
	* examples/hildon-check-button-example.c:
	HildonCheckButton is now a new widget. 'toggled' signal added.

2008-10-08  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-program-private.h
	* src/hildon-program.c (hildon_program_init)
	(hildon_program_finalize): Removed unused variables group_leader
	and name from HildonProgramPrivate.

2008-10-08  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-check-button.c (hildon_check_button_set_active)
	(hildon_check_button_get_active, hildon_check_button_new): Use
	g_object_[gs]et_qdata() instead of g_object_[gs]et_data().

2008-10-08  Alejandro Pinheiro	 <apinheiro@igalia.com>

	* src/hildon-touch-selector.h
	(hildon_touch_selector_set_column_attributes): added deprecation
	guard HILDON_DISABLE_DEPRECATED
	* src/hildon-time-selector.c
	(hildon_time_selector_set_time)
	(hildon_time_selector_get_time): Fixed a typo on documentation
	* src/hildon-touch-selector.c: update HildonTouchSelector and
	HildonTouchSelectorColumn documentation
	* src/hildon-touch-selector-entry.c: update "text-column" property
	documentation
	* doc/hildon-docs.sgml: added hildon-touch-selector-column in order
	to be added to the general documentation.

2008-10-08  Alejandro G. Castro	 <alex@igalia.com>

	* examples/hildon-pannable-area-example-4.c,
	(main),